package com.examen_5.Ejercicio_1.Entrega_1.EstrategiasServicio;

public interface EstrategiaServicio {
    void servir();
}

