package com.examen_5.Ejercicio_1.Entrega_1.EstrategiasServicio;

public class EstrategiaServicioTematico implements EstrategiaServicio {
    @Override
    public void servir() {
        System.out.println("Servicio enfocado en la experiencia temática.");
    }
}
