@startuml
title Ejercicio 1 - Patrones de Construcción

class GestorRestaurantes {
    -instance: GestorRestaurantes
    -restaurantes: List<Restaurante>
    +getInstance(): GestorRestaurantes
    +agregarRestaurante(restaurant: Restaurante): void
    +obtenerRestaurantes(): List<Restaurante>
}

class Restaurante {
    -nombre: String
    -estrategiaServicio: EstrategiaServicio
    +servir(): void
    +establecerEstrategiaServicio(estrategia: EstrategiaServicio): void
}

class RestauranteLujo {
}

class RestauranteRapido {
}

class RestauranteTematico {
}

class RestaurantesFactory {
    +obtenerRestaurante(tipo: String, nombre: String): Restaurante
}

interface EstrategiaServicio {
    +servir(): void
}

class EstrategiaServicioLujo {
}

class EstrategiaServicioRapido {
}

class EstrategiaServicioTematico {
}

Restaurante <|-- RestauranteLujo
Restaurante <|-- RestauranteRapido
Restaurante <|-- RestauranteTematico
EstrategiaServicio <|.. EstrategiaServicioLujo
EstrategiaServicio <|.. EstrategiaServicioRapido
EstrategiaServicio <|.. EstrategiaServicioTematico
Restaurante "1" *-- "1" EstrategiaServicio : usa >
RestaurantesFactory ..> Restaurante : crea >
GestorRestaurantes "1" o-- "*" Restaurante : gestiona >

@enduml
